# lumina-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  lumina-agent-design-doc.md  pyproject.toml
app/: config.py  main.py  schemas.py  ui.py
app/agent/: runner.py
app/cv/: analyzer.py  engine.py  grounding.py  sam.py  segmentor.py
app/services/: session.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  tokens.css  types.ts
frontend/src/components/: CommandBar.tsx  RecipeHUD.tsx  Stage.tsx  Timeline.tsx
tests/: test_analyzer.py  test_engine.py  test_segmentor.py  test_selection.py
