[project]
name = "lumina-agent"
version = "2.0.0"
description = "Deterministic AI Photo Retouching Engine"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "pydantic-ai>=0.1.0",
    "opencv-python-headless>=4.9.0",
    "numpy>=1.26.0,<2",
    "mediapipe>=0.10.18",
    "onnxruntime>=1.17.0",
    "ultralytics>=8.3.0",  # YOLO-World open-vocabulary detection (text -> box) for Grounded-SAM
    # NOTE: YOLO-World's text encoder needs a `clip` module. Its packaging is too broken for a
    # strict uv build, but ultralytics installs it itself (via git) on first set_classes(). So
    # `git` is required in the image and the Dockerfile bakes clip at build via a warm-up step.
    # Declared explicitly so [tool.uv.sources] routes them to the CPU-only PyTorch index.
    "torch",
    "torchvision",
    "redis>=5.0.0",
    "python-multipart>=0.0.9",
    "logfire[fastapi]>=3.0",
    "pillow-heif>=1.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

# Pull the CPU-only torch build (ultralytics/YOLO-World's dep). The default CUDA wheel drags
# in ~4.5GB of nvidia/triton that never runs on Railway's CPU boxes.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
